--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/assets/css/burger_style.css">
     <title>EAT-DA-BURGER</title>
     <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="assets/javascript/app.js"></script>
 </head>
 
 <body>
