--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,10 @@
-<div class="burger-list">
-    {{#each burgers}}
-      <p>Type: {{burger_name}}</p>
-      <button>Eat-Da-Burger</button>
-    {{/each}}
+<div class="row">
+    <div class="col-md-12">
+        <div class="burger-list">
+            {{#each burgers}}
+                <p>{{burger_name}}</p>
+                <button>Devour</button>
+            {{/each}}
+        </div>
+    </div>
 </div>
