--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,13 +7,12 @@
     <link rel="stylesheet" href="/assets/css/burger_style.css">
     <title>EAT-DA-BURGER</title>
     <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="assets/javascript/app.js"></script>
+    <script src="assets/js/app.js"></script>
 </head>
 
 <body>
-    <h1>EAT-DA-BURGER</h1>
+    <h1 class="mb-4">EAT-DA-BURGER</h1>
     {{{ body }}}
-
 </body>
 
 </html>
