minor style changes

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1 class="mb-4">EAT-DA-BURGER</h1>
+    <h1 class="mb-5 masthead">EAT-DA-BURGER</h1>
     {{{ body }}}
 </body>
 
