--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,8 +6,9 @@
             <div class="burger-list">
                 {{#each burgers}} {{#unless this.devoured}}
                 <div class="burger" data-devoured="false">
+                    <img src="assets/img/krabby_patty.jpg" alt="krabby-patty-pic" id="burger-pic">
                     <h5>{{this.burger_name}}</h5>
-                    <button type="button" data-burger-id="{{this.id}}" class=" btn-outline-primary mb-3" id="devour-button">Devour</button>
+                    <button data-burger-id="{{this.id}}" class=" btn-outline-primary mb-3" id="devour-button">Devour</button>
                 </div>
                 {{/unless}} {{/each}}
             </div>
@@ -17,6 +18,7 @@
             <div class="burger-list">
                 {{#each burgers}} {{#if this.devoured}}
                 <div class="devoured-burger">
+                    <img src="assets/img/krabby_patty.jpg" alt="krabby-patty-pic" id="burger-pic">
                     <h5>{{this.burger_name}}</h5>
                 </div>
                 {{/if}} {{/each}}
