devour button bug

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,7 +8,7 @@
                 <div class="burger" data-devoured="false">
                     <img src="assets/img/krabby_patty.jpg" alt="krabby-patty-pic" id="burger-pic">
                     <h5>{{this.burger_name}}</h5>
-                    <button data-burger-id="{{this.id}}" class=" btn-outline-primary mb-3" id="devour-button">Devour</button>
+                    <button data-burger-id="{{this.id}}" class="devour-button btn-outline-primary mb-3">Devour</button>
                 </div>
                 {{/unless}} {{/each}}
             </div>
